[workspace]

resolver = "2"

members = [
  "crates/rollup",
  "crates/stf",
  "crates/stf/stf-declaration",
  "examples/value-setter",
  "scripts/acceptance-test",
  "scripts/soak-test",
]
default-members = ["crates/rollup"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Sovereign Permissionless Commercial License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.88"

[workspace.dependencies]
sov-address = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e", features = [
  "evm",
] }
sov-accounts = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-api-spec = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-attester-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-chain-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-blob-storage = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-paymaster = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-capabilities = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-celestia-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-cli = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-db = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-hyperlane-integration = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e", features = [
  "evm",
] }
sov-hyperlane-register-module = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-test-state-consistency = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-kernels = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-ledger-apis = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-mock-da = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-mock-zkvm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-modules-rollup-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-modules-stf-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-uniqueness = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-operator-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-prover-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-revenue-share = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-risc0-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-sp1-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-sequencer = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-sequencer-registry = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-soak-testing-lib = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-stf-runner = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-test-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-rollup-apis = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-universal-wallet = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-zkvm-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-build = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-ethereum = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-evm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-soak-testing = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-eip712-auth = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
sov-rest-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "ab43984a57e5f441ce61de370f6117ec70ef863e" }
stf-starter = { path = "./crates/stf", default-features = false }
stf-starter-declaration = { path = "./crates/stf/stf-declaration", default-features = false }
value-setter = { path = "./examples/value-setter" }
strum = { version = "0.26.3", features = ["derive"] }

alloy-consensus = { version = "1.0.37", default-features = false }
axum = { version = "0.7.9", default-features = false }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

prometheus_exporter = "0.8.5"
sha2 = { version = "=0.10.9", default-features = false }

schemars = { version = "0.8.21", features = ["derive"] }
anyhow = { version = "1.0.95" }
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "1", features = ["rc", "bytes"] }
tracing = { version = "0.1.40", default-features = false }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
tempfile = "3.20"
jsonrpsee = { version = "0.26", features = ["jsonrpsee-types"] }
risc0-build = "2.1"

# [patch."https://github.com/paradigmxyz/reth"]
# reth-rpc-eth-types = { path = "/home/gentoo/work/sovereign/reth/crates/rpc/rpc-eth-types" }
